# yolov7-ros

./: CMakeLists.txt
install/: local_setup.sh  setup.sh
install/yolov7_ros/share/ament_index/resource_index/package_run_dependencies/: yolov7_ros
install/yolov7_ros/share/yolov7_ros/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh  yolov7.launch
log/: latest_build
src/: detect_ros.py
src/utils/: ros.py
